crates/daemon/tests/snapshots/gateway_reconciliation__caddy_cli_command_and_process_specs_are_stable.snap
---
source: crates/daemon/tests/gateway_reconciliation.rs
expression: snapshot
---
(
    [
        "validate",
        "--config",
        "<tempdir>/home/.pv/config/gateway/Caddyfile",
        "--adapter",
        "caddyfile",
    ],
    [
        "run",
        "--config",
        "<tempdir>/home/.pv/config/gateway/Caddyfile",
        "--adapter",
        "caddyfile",
    ],
    ProcessSpec {
        name: "gateway",
        command: "<tempdir>/caddy",
        arguments: [
            "run",
            "--config",
            "<tempdir>/home/.pv/config/gateway/Caddyfile",
            "--adapter",
            "caddyfile",
        ],
        private_environment: {
            "XDG_CONFIG_HOME": "<redacted>",
            "XDG_DATA_HOME": "<redacted>",
        },
        config_path: "<tempdir>/home/.pv/config/gateway/Caddyfile",
        log_path: "<tempdir>/home/.pv/logs/gateway/supervisor.log",
        pid_path: "<tempdir>/home/.pv/run/gateway.pid",
        metadata_path: "<tempdir>/home/.pv/run/gateway.json",
        resource_name: "caddy",
        track: "2",
    },
    ProcessSpec {
        name: "php-worker-8.4",
        command: "<tempdir>/frankenphp",
        arguments: [
            "run",
            "--config",
            "<tempdir>/home/.pv/config/workers/php-8.4/Caddyfile",
            "--adapter",
            "caddyfile",
        ],
        private_environment: {
            "PHPRC": "<redacted>",
            "PHP_INI_SCAN_DIR": "<redacted>",
            "XDG_CONFIG_HOME": "<redacted>",
            "XDG_DATA_HOME": "<redacted>",
        },
        config_path: "<tempdir>/home/.pv/config/workers/php-8.4/Caddyfile",
        log_path: "<tempdir>/home/.pv/logs/workers/php-8.4.log",
        pid_path: "<tempdir>/home/.pv/run/workers/php-8.4.pid",
        metadata_path: "<tempdir>/home/.pv/run/workers/php-8.4.json",
        resource_name: "frankenphp",
        track: "8.4",
    },
)
