crates/daemon/tests/snapshots/gateway_reconciliation__drifted_pf_state_keeps_owned_gateway_running_after_bounded_public_probe.snap
---
source: crates/daemon/tests/gateway_reconciliation.rs
expression: snapshot
---
[
    RuntimeObservedStateRecord {
        subject: Gateway,
        status: Degraded,
        message: Some(
            "Low-port routing is drifted; run `pv ports:install` to restore ports 80 and 443",
        ),
        observed_at: "<timestamp>",
    },
]
