crates/daemon/tests/snapshots/gateway_reconciliation__gateway_reconciliation_starts_gateway_and_one_worker_per_php_track.snap
---
source: crates/daemon/tests/gateway_reconciliation.rs
expression: snapshot
---
[
    RuntimeObservedStateRecord {
        subject: Gateway,
        status: Degraded,
        message: Some(
            "Low-port routing is inactive; run `pv ports:install` to restore ports 80 and 443",
        ),
        observed_at: "<timestamp>",
    },
    RuntimeObservedStateRecord {
        subject: PhpWorker {
            php_track: "8.4",
        },
        status: Running,
        message: Some(
            "Gateway runtime reconciled",
        ),
        observed_at: "<timestamp>",
    },
]
