crates/daemon/tests/snapshots/gateway_reconciliation__prepared_pf_files_do_not_force_public_readiness_when_rules_are_inactive.snap
---
source: crates/daemon/tests/gateway_reconciliation.rs
expression: snapshot
---
[
    RuntimeObservedStateRecord {
        subject: Gateway,
        status: Degraded,
        message: Some(
            "Low-port routing is inactive; run `pv ports:install` to restore ports 80 and 443",
        ),
        observed_at: "<timestamp>",
    },
]
