crates/daemon/tests/snapshots/gateway_reconciliation__runtime_plan_defaults_document_root_to_public_directory_without_config.snap
---
source: crates/daemon/tests/gateway_reconciliation.rs
expression: plan
---
RuntimePlan {
    gateway: GatewayRuntimePlan {
        http_port: <port>,
        https_port: <port>,
        admin_socket_path: "<tempdir>/home/.pv/run/gateway-admin.sock",
        ca_certificate_path: "<tempdir>/home/.pv/certificates/ca.pem",
        ca_private_key_path: "<tempdir>/home/.pv/certificates/ca-key.pem",
        storage_path: "<tempdir>/home/.pv/certificates/caddy-96a296d224f285c67bee93c30f8a309157f0daa35dc5b87e410b78630a09cfc7",
    },
    workers: [
        PhpWorkerRuntimePlan {
            php_track: "8.4",
            runtime_key: "8.4",
            loaded_modules: [],
            port: <port>,
            admin_socket_path: "<tempdir>/home/.pv/run/worker-admin-163c820d9576.sock",
            projects: [
                RuntimeProject {
                    id: "<project_id>",
                    render_config: true,
                    primary_hostname: "configless.test",
                    hostnames: [],
                    project_root: "<tempdir>/configless-project",
                    document_root: "<tempdir>/configless-project/public",
                },
            ],
        },
    ],
}
